# ftmo_exness_hedge_v3

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  step-3.1-server-redis-service-full-selfcheck.md  step-3.2-server-consumer-groups-setup-selfcheck.md  step-3.3-ftmo-client-skeleton-selfcheck.md  step-3.3a-shared-pytyped-marker-selfcheck.md  step-3.3b-ftmo-client-install-fix-selfcheck.md  step-4.A.2-mapping-cache-repository-selfcheck.md
.claude/: settings.json
.devcontainer/: devcontainer.json  post-create.sh
apps/exness-client/: .env.example  README.md  pyproject.toml
apps/exness-client/exness_client/: __init__.py  account_info.py  action_handlers.py  bridge_service.py  cmd_ledger.py  command_processor.py  config.py  heartbeat.py  main.py  mt5_stub.py  position_monitor.py  retcode_mapping.py  shutdown.py  symbol_sync.py
apps/exness-client/tests/: conftest.py  test_account_info.py  test_action_handlers.py  test_bridge_service.py  test_cmd_ledger.py  test_command_processor_skeleton.py  test_config.py  test_heartbeat.py  test_lifecycle_integration.py  test_main_lifecycle.py  test_position_monitor.py  test_retcode_mapping.py  test_shutdown.py  test_symbol_sync.py
apps/ftmo-client/: .env.example  README.md  pyproject.toml
apps/ftmo-client/ftmo_client/: __init__.py  account_info.py  action_handlers.py  command_loop.py  config.py  ctrader_bridge.py  ctrader_oauth.py  event_publisher.py  heartbeat.py  main.py  oauth_storage.py  retcode_mapping.py  shutdown.py
apps/ftmo-client/ftmo_client/scripts/: run_oauth_flow.py
apps/ftmo-client/tests/: conftest.py  test_account_info.py  test_action_handlers_real.py  test_action_handlers_stub.py  test_command_loop.py  test_ctrader_bridge_actions.py  test_ctrader_bridge_unsolicited.py  test_event_publisher.py  test_heartbeat.py  test_main_wiring.py  test_oauth_storage.py  test_reconciliation.py  test_retcode_mapping.py
archive/: README.md  symbol_mapping_ftmo_exness_v1.json
docs/: 00-overview.md  01-architecture.md  02-server-overview.md  03-ftmo-client.md  04-exness-client.md  05-redis-protocol.md  06-data-models.md  07-server-services.md  08-server-api.md  09-frontend.md  10-flows.md  11-deployment.md  12-business-rules.md  13-rebuild-guide.md  CTO_HANDOFF_TEMPLATE.md  DECISIONS.md  MASTER_PLAN_v2.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PROJECT_STATE.md  RUNBOOK.md  SYMBOL_MAPPING_DECISIONS.md  WORKFLOW.md  ctrader-execution-events.md  mt5-execution-events.md  phase-4-design.md  phase-4-symbol-mapping-design.md
hooks/: post-commit
scripts/: claude-with-notify.sh  init_account.py  install-git-hooks.sh  migrate_extract_ftmo_whitelist.py  notify_telegram.sh
server/: pyproject.toml
server/app/: auth.py  config.py  main.py  redis_client.py
server/app/api/: accounts.py  auth.py  auth_ctrader.py  charts.py  health.py  history.py  orders.py  pairs.py  positions.py  symbol_mapping.py  symbols.py  ws.py
server/app/dependencies/: auth.py  auto_match.py  mapping_cache.py  mapping_cache_service.py  mapping_service.py
server/app/services/: account_helpers.py  account_status.py  alert_service.py  auto_match_engine.py  broadcast.py  conversion_rate.py  ctrader_oauth.py  event_handler.py  ftmo_whitelist_service.py  hedge_service.py  legacy_archive_parser.py  mapping_cache_repository.py  mapping_cache_schemas.py  mapping_cache_service.py  mapping_service.py  market_data.py  match_hints_schemas.py  order_service.py  position_tracker.py  redis_service.py  redis_service_lua.py  response_handler.py  symbol_whitelist.py  volume_calc.py  volume_service.py
server/config/: symbol_match_hints.json
server/data/: ftmo_whitelist.json
server/tests/: conftest.py  test_account_helpers.py  test_account_status_loop.py  test_accounts_api.py  test_accounts_broker_type.py  test_alert_service.py  test_alert_service_telegram.py  test_auth.py  test_auto_match_engine.py  test_broadcast_coalesce.py  test_cascade_lock.py  test_charts.py  test_check_pair_symbol_api.py  test_close_order_endpoint.py  test_config.py  test_event_handler.py  test_event_handler_cascade_close.py  test_event_handler_close_external.py  test_event_handler_position_modified.py  test_exness_response_handler.py  test_health.py  test_hedge_service_alert_emit.py  test_hedge_service_cascade_close.py  test_hedge_service_cascade_open.py  test_history_api.py  test_init_mapping_statuses_orphan_detection.py  test_legacy_archive_parser.py  test_lifespan_handlers.py  test_lifespan_integration.py  test_mapping_cache_repository.py  test_mapping_cache_service.py  test_mapping_service.py  test_mapping_status_init.py  test_market_data_basic.py  test_migration_extract_ftmo_whitelist.py  test_order_service.py  test_order_service_hedge.py  test_order_service_list.py  test_orders_api.py  test_orders_close_modify_api.py  (+18 more)
server/tests/scripts/: __init__.py  test_init_account.py
server/tests/services/: test_redis_service.py  test_redis_service_remove_account_mapping_cleanup.py
shared/: pyproject.toml
shared/hedger_shared/: ctrader_oauth.py  symbol_mapping.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx
web/src/api/: client.ts  symbolMapping.ts  symbols.test.ts
web/src/components/: Login.tsx  MainPage.tsx  (+1 more)
(+52 files in other folders)
