[project]
name = "hedger-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  # httpx is pulled in for hedger_shared.ctrader_oauth (extracted from
  # server in step 3.3 so server + ftmo-client share the OAuth helpers).
  "httpx>=0.27,<0.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hedger_shared*"]
