[project]
name = "hedger-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  # As of step 4.4a (CPR), this package only contains the LEGACY
  # symbol_mapping module (kept for the archive-file regression test
  # at server/tests/test_symbol_whitelist.py). Phase 5 will delete the
  # whole hedger_shared package; until then pydantic is the only
  # runtime dependency that LEGACY symbol_mapping needs.
  "pydantic>=2.7,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hedger_shared*"]

# Ship the PEP 561 marker so mypy treats hedger_shared as a typed
# package downstream (server + ftmo-client + future Exness client).
# Without this, an editable install drops py.typed and mypy reports
# `Cannot find implementation or library stub for module …` on every
# hedger_shared import.
[tool.setuptools.package-data]
hedger_shared = ["py.typed"]
