[project]
name = "ftmo-client"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "redis[hiredis]>=5.0,<6",
  "httpx>=0.27,<0.28",
  # Same Twisted + protobuf stack as server's market_data bridge. The
  # ctrader-open-api 0.9.2 hard-pins protobuf==3.20.1; devcontainer
  # post-create installs it with --no-deps and the rest of the stack
  # is pinned here directly.
  "twisted>=23,<26",
  "protobuf>=4.25,<6",
  "service-identity>=24,<26",
  "pyOpenSSL>=24,<26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "fakeredis[lua]>=2.24",
  "mypy>=1.10",
  "ruff>=0.5",
]

[project.scripts]
ftmo-client = "ftmo_client.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ftmo_client*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "PLC"]
